# saml2aws-multi

./: .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ReleaseNotes.md  install-saml2aws.sh  pyproject.toml  requirements-build.txt  requirements-test.txt  setup.py  tox.ini
.cursor/rules/: makefile-python.mdc  makefile-workflow.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-and-test.yml  build-branch.yml  build-main.yml  ci-workflow.yaml  ci.yml  codeql-analysis.yml  dependabot-auto-approve-merge.yml  secrets-scan.yml  snyk.yml  stale-issues.yml
saml2awsmulti/: aws_login.py  file_io.py  saml2aws_helper.py  selector.py
saml2awsmulti/tests/: test_aws_login.py  test_file_io.py  test_saml2aws_helper.py  test_selector.py
tests/: test_aws_login.py  test_file_io.py  test_saml2aws_helper.py  test_selector.py
